# fei

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  tsconfig.json
.github/workflows/: terraform.yml
apps/web/: astro.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
botvinick/: lab.json
botvinick/01-learning-to-reinforcement-learn/: README.md  paper.md
botvinick/02-prefrontal-cortex-meta-rl/: README.md
botvinick/03-reinforcement-learning-fast-and-slow/: README.md
botvinick/04-distributional-code-for-value-dopamine/: README.md
docs/: ARCHITECTURE.md
friston/: lab.json
friston/01-theory-of-cortical-responses/: paper.md
friston/02-free-energy-principle-active-inference/: paper.md
gershman/: lab.json
gershman/01-neural-evidence-strategy-reuse/: critique.md  notes.md
gershman/02-policy-compression-information-bottleneck/: paper.md
gershman/03-action-subsampling-policy-compression/: critique.md  notes.md  paper.md
gershman/04-action-chunking-policy-compression/: paper.md
gershman/06-synthesizing-world-models-bilevel-planning/: paper.md
hafner/: lab.json
hafner/dino-wm/: paper.md
infra/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf
schulz/: lab.json
scripts/: pdf_to_markdown.py
simharness/: README.md  pyproject.toml
simharness/experiments/: bandit_smoke.py
simharness/src/simharness/: __init__.py  agents.py  core.py  metrics.py  tasks.py
simharness/tests/: test_bandit.py
tenenbaum/: lab.json
(+82 files in other folders)
