[project]
name = "simharness"
version = "0.1.0"
description = "GPU-scalable harness for stress-testing small-scale cognitive-science simulations"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.7.0",
    "matplotlib>=3.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

# On an AWS GPU instance, install the CUDA build instead of the CPU wheel:
#   uv pip install -U "jax[cuda12]"
# The simulation code is identical on both — only the wheel changes.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simharness"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
